force-app/main/default/objects/UserStoryRelation__c/UserStoryRelation__c.object-meta.xml
<CustomObject>
    <description>Describe a relationship between two User Stories. One story may depend upon another story. One Story my be blocked by another story. Or simply One story my just relate to another story.</description>
    <label>User Story Relation</label>
    <nameField>
        <displayFormat>USR-{00000000}</displayFormat>
        <label>User Story Relation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Story Relations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>