force-app/main/default/objects/UserStoryRelation__c/fields/Source__c.field-meta.xml
<CustomField>
    <fullName>Source__c</fullName>
    <description>The User Story that claims this relationship</description>
    <label>Source</label>
    <referenceTo>UserStory__c</referenceTo>
    <relationshipLabel>Dependencies</relationshipLabel>
    <relationshipName>SourceRelations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>