force-app/main/default/objects/UserStoryRelation__c/fields/SourceNumber__c.field-meta.xml
<CustomField>
    <fullName>SourceNumber__c</fullName>
    <formula>Source__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Source Number</label>
    <type>Text</type>
</CustomField>