force-app/main/default/objects/UserStoryRelation__c/fields/Target__c.field-meta.xml
<CustomField>
    <fullName>Target__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The User Story target of this relationship.</description>
    <label>Target</label>
    <referenceTo>UserStory__c</referenceTo>
    <relationshipLabel>Is depended upon by</relationshipLabel>
    <relationshipName>TargetRelations</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>