force-app/main/default/objects/UserStoryRelation__c/fields/TargetNumber__c.field-meta.xml
<CustomField>
    <fullName>TargetNumber__c</fullName>
    <formula>Target__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Target Number</label>
    <type>Text</type>
</CustomField>